welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: Unmatched closing brace '}' ignored here
          casee=casee+1}
                       ^golomb:20: error: Unmatched closing brace '}' ignored here
 }
 ^