welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array[Int](num+1)
  var casee:Int=3
  var compteur:Int=1
  T(0)=0
  T(1)=1
  if (num>1) {
    T(2)=2
    for (i <-2 to num) {}       
        while (compteur!=T(i)  && (casee<=num)) {
          T(casee)=i
          compteur=compteur+1
          casee=casee+1}
        compteur=0}}    
    }
  return T(num) 
}
    
  